<resources>
    <string name="app_name">AppEdu</string>
    <string name="title_activity_sesion_iniciada">SesionIniciada</string>
    <string name="title_activity_main_sesion">App Edu</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrate">Registrate</string>
    <string name="nombre">Nombre(s)</string>
    <string name="apellidos">Apellidos</string>
    <string name="confirmcontrase_a">Confirmar Contraseña</string>
    <string name="continuar">Continuar</string>
    <string name="regProf">Profesor</string>
    <string name="regAlum">Alumno</string>
    <string name="regPad">Padre</string>
    <string name="mat">Materia(s)</string>
    <string name="cedula">Cedula Identidad</string>
    <string name="cedulaHij">C.I. Hijo</string>
    <string name="ejem">Ej, matematicas, lenguaje, ...</string>
    <string name="ci">C.I.</string>
    <string name="cie">Ingrese su C.I.</string>
    <string name="title_activity_main_notas">mainNotas</string>
    <string name="visualizar_notas">Ver Notas</string>
    <string name="title_activity_ver_notas">verNotas</string>
    <string name="title_activity_main_seci">mainSeci</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Añadir Materia</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Archivos</string>
    <string name="menu_tareas">Actividades / Tareas</string>
    <string name="menu_calendario">Calendario</string>
    <string name="menu_notas">Notas</string>
    <string name="menu_send">Subir Notas</string>
    <string name="notas">Notas</string>
    <string name="calificaciones">Calificaciones</string>
    <string name="correo">Correo Electronico</string>
    <string name="logout">Cerrar Sesion</string>

</resources>
