<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bar_Prof"
            android:icon="@drawable/sharp_menu_24"
            android:title="@string/regPad"/>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_list_24"
            android:title="@string/menu_tareas"/>

        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/baseline_calendar_today_24"
            android:title="@string/menu_calendario" />

    </group>

    <item android:title="@string/calificaciones">
        <menu>
            <item
                android:id="@+id/nav_notas"
                android:icon="@drawable/outline_insert_drive_file_24"
                android:title="@string/menu_notas" />
        </menu>
    </item>

</menu>