<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bar"
            android:icon="@drawable/sharp_menu_24"
            android:title="@string/app_name"/>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_file_copy_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_list_24"
            android:title="menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/baseline_calendar_today_24"
            android:title="menu_tools" />
    </group>

    <item android:title="Calificaciones">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/outline_insert_drive_file_24"
                android:title="menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/baseline_add_24"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>