<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.regisProf"
    android:background="@drawable/material">

    <TextView
        android:id="@+id/textView"
        android:layout_width="214dp"
        android:layout_height="38dp"
        android:layout_marginTop="124dp"
        android:background="@drawable/borde"
        android:padding="10dp"
        android:text="@string/ejem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="274dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/borde"
        android:ems="10"
        android:hint="@string/mat"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/continuar"
        android:onClick="regisProfe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />




</androidx.constraintlayout.widget.ConstraintLayout>