<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroRoles"
    android:background="@drawable/material">


    <EditText
        android:id="@+id/editText1"
        android:layout_width="274dp"
        android:layout_height="49dp"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/borde"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="274dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/apellidos"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        android:background="@drawable/borde"/>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="274dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        android:background="@drawable/borde"/>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="274dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/confirmcontrase_a"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        android:background="@drawable/borde"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="292dp"
        android:layout_height="22dp"
        android:layout_marginTop="19dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />



</androidx.constraintlayout.widget.ConstraintLayout>